--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=MsgPacketizer
 version=0.2.0
 author=hideakitai
 maintainer=hideakitai
-sentence=MessagePack implementation for Arduino (compatible with other C++ apps)
-paragraph=MessagePack implementation for Arduino (compatible with other C++ apps)
+sentence=msgpack based serializer and deserializer with packetize for Arduino and more
+paragraph=msgpack based serializer and deserializer with packetize for Arduino and more
 category=Communication
 url=https://github.com/hideakitai
 architectures=*
