update Packetizer to v0.4.0

--- a/util/Packetizer/library.properties
+++ b/util/Packetizer/library.properties
@@ -1,9 +1,9 @@
 name=Packetizer
-version=0.3.7
+version=0.4.0
 author=hideakitai
 maintainer=hideakitai
-sentence=binary data packetization encoder / decoder
-paragraph=binary data packetization encoder / decoder
+sentence=binary data packetization encoder / decoder based on COBS / SLIP encoding
+paragraph=binary data packetization encoder / decoder based on COBS / SLIP encoding
 category=Communication
 url=https://github.com/hideakitai
 architectures=*
