--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MsgPacketizer
-version=0.2.12
+version=0.2.13
 author=hideakitai
 maintainer=hideakitai
 sentence=msgpack based serializer and deserializer with packetize for Arduino and more
 paragraph=msgpack based serializer and deserializer with packetize for Arduino and more
 category=Communication
-url=https://github.com/hideakitai
+url=https://github.com/hideakitai/MsgPacketizer
 architectures=*
