--- a/util/Packetizer/library.properties
+++ b/util/Packetizer/library.properties
@@ -1,9 +1,9 @@
 name=Packetizer
-version=0.5.0
+version=0.5.1
 author=hideakitai
 maintainer=hideakitai
 sentence=binary data packetization encoder / decoder based on COBS / SLIP encoding
 paragraph=binary data packetization encoder / decoder based on COBS / SLIP encoding
 category=Communication
-url=https://github.com/hideakitai
+url=https://github.com/hideakitai/Packetizer
 architectures=*
